--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -2,3 +2,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
   rel="stylesheet">
+<style>
+  body pre.prismjs {
+    color: unset !important;
+  }
+
+  /* Code editor color */
+  .css-1dt41f3 {
+    background-color: #111218 !important;
+  }
+</style>
