--- a/packages/blade/.storybook/react/manager-head.html
+++ b/packages/blade/.storybook/react/manager-head.html
@@ -12,6 +12,7 @@
     --blade-surface-text-normal: rgba(19, 38, 68, 1);
     --blade-brand-gray: rgba(121, 135, 156, 0.18);
     --blade-brand-gray-light: rgba(121, 135, 156, 0.08);
+    --blade-border-color: #EFEFEF;
   }
 
   .search-field input {
@@ -55,5 +56,10 @@
 
   .sto-1va4tas {
     box-shadow: none !important;
+  }
+
+  .sto-rmwe9s {
+    box-shadow: none !important;
+    border-bottom: 1px solid var(--blade-border-color) !important;
   }
 </style>
