feat: add fonts from csb

--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -1,3 +1,4 @@
+<link href="https://pkg.csb.dev/razorpay/blade/commit/09774406/@razorpay/blade/fonts.css" rel="stylesheet">
 <style>
   body pre.prismjs {
     color: unset !important;
