--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -1,7 +1,4 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-  rel="stylesheet">
+<link href="https://pkg.csb.dev/razorpay/blade/commit/09774406/@razorpay/blade/fonts.css" rel="stylesheet">
 <style>
   body pre.prismjs {
     color: unset !important;
