--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -8,7 +8,7 @@
 * :where(ul:not(.sb-anchor, .sb-unstyled, .sb-unstyled ul)),
 * :where(ol:not(.sb-anchor, .sb-unstyled, .sb-unstyled ol)),
 * :where(li:not(.sb-anchor, .sb-unstyled, .sb-unstyled li)) {
-    font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
+    font-family: "Inter", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif !important;
 }
   body pre.prismjs {
     color: unset !important;
