--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -1,14 +1,18 @@
 <link href="https://pkg.csb.dev/razorpay/blade/commit/f2ca3f2f/@razorpay/blade/fonts.css" rel="stylesheet">
 <style>
 * :where(p:not(.sb-anchor, .sb-unstyled, .sb-unstyled p)),
-* :where(h1:not(.sb-anchor, .sb-unstyled, .sb-unstyled h1)),
-* :where(h2:not(.sb-anchor, .sb-unstyled, .sb-unstyled h2)),
-* :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h3)),
-* :where(h4:not(.sb-anchor, .sb-unstyled, .sb-unstyled h4)),
 * :where(ul:not(.sb-anchor, .sb-unstyled, .sb-unstyled ul)),
 * :where(ol:not(.sb-anchor, .sb-unstyled, .sb-unstyled ol)),
 * :where(li:not(.sb-anchor, .sb-unstyled, .sb-unstyled li)) {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif !important;
+}
+* :where(h1:not(.sb-anchor, .sb-unstyled, .sb-unstyled h1)),
+* :where(h2:not(.sb-anchor, .sb-unstyled, .sb-unstyled h2)),
+* :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h3)),
+* :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h4)),
+* :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h5)),
+* :where(h4:not(.sb-anchor, .sb-unstyled, .sb-unstyled h6)){
+    font-family: "TASA Orbiter", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif !important;
 }
   body pre.prismjs {
     color: unset !important;
