--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -1,21 +1,42 @@
 <link href="https://pkg.csb.dev/razorpay/blade/commit/f2ca3f2f/@razorpay/blade/fonts.css" rel="stylesheet">
 <style>
-* :where(p:not(.sb-anchor, .sb-unstyled, .sb-unstyled p)),
-* :where(ul:not(.sb-anchor, .sb-unstyled, .sb-unstyled ul)),
-* :where(ol:not(.sb-anchor, .sb-unstyled, .sb-unstyled ol)),
-* :where(li:not(.sb-anchor, .sb-unstyled, .sb-unstyled li)) {
+  /* 
+    Fix these overrides when there is better resolution to this issue-
+    https://github.com/storybookjs/storybook/discussions/21109
+  */
+  * :where(p:not(.sb-anchor, .sb-unstyled, .sb-unstyled p)),
+  * :where(a:not(.sb-anchor, .sb-unstyled, .sb-unstyled a)),
+  * :where(div:not(.sb-anchor, .sb-unstyled, .sb-unstyled div)),
+  * :where(span:not(.sb-anchor, .sb-unstyled, .sb-unstyled span)),
+  * :where(ul:not(.sb-anchor, .sb-unstyled, .sb-unstyled ul)),
+  * :where(ol:not(.sb-anchor, .sb-unstyled, .sb-unstyled ol)),
+  * :where(li:not(.sb-anchor, .sb-unstyled, .sb-unstyled li)) {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif !important;
-}
-* :where(h1:not(.sb-anchor, .sb-unstyled, .sb-unstyled h1)),
-* :where(h2:not(.sb-anchor, .sb-unstyled, .sb-unstyled h2)),
-* :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h3)),
-* :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h4)),
-* :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h5)),
-* :where(h4:not(.sb-anchor, .sb-unstyled, .sb-unstyled h6)){
+  }
+
+  * :where(h1:not(.sb-anchor, .sb-unstyled, .sb-unstyled h1)),
+  * :where(h1:not(.sb-anchor, .sb-unstyled, .sb-unstyled h1)) *,
+  * :where(h2:not(.sb-anchor, .sb-unstyled, .sb-unstyled h2)),
+  * :where(h2:not(.sb-anchor, .sb-unstyled, .sb-unstyled h2)) *,
+  * :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h3)),
+  * :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h3)) *,
+  * :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h4)),
+  * :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h4)) *,
+  * :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h5)),
+  * :where(h3:not(.sb-anchor, .sb-unstyled, .sb-unstyled h5)) *,
+  * :where(h4:not(.sb-anchor, .sb-unstyled, .sb-unstyled h6)),
+  * :where(h4:not(.sb-anchor, .sb-unstyled, .sb-unstyled h6)) * {
     font-family: "TASA Orbiter", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif !important;
-}
+  }
+
+  * pre :where(span:not(.sb-anchor, .sb-unstyled, .sb-unstyled span)) {
+    font-family: "Menlo", San Francisco Mono, Courier New, Roboto Mono, monospace !important;
+    font-size: 14px !important;
+  }
+
   body pre.prismjs {
     color: unset !important;
+    font-family: "Menlo", San Francisco Mono, Courier New, Roboto Mono, monospace !important;
   }
 
   /* Code editor color */
