refactor: update storybook styles

--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -6,7 +6,7 @@
   */
   * :where(p:not([data-blade-component="base-text"], .sb-anchor, .sb-unstyled, .sb-unstyled p)),
   * :where(a:not(.sb-anchor, .sb-unstyled, .sb-unstyled a)),
-  * :where(div:not(.sb-anchor, .sb-unstyled, .sb-unstyled div)),
+  * :where(div:not([data-blade-component="base-text"], .sb-anchor, .sb-unstyled, .sb-unstyled div)),
   * :where(span:not([data-blade-component="base-text"], .sb-anchor, .sb-unstyled, .sb-unstyled span)),
   * :where(ul:not(.sb-anchor, .sb-unstyled, .sb-unstyled ul)),
   * :where(ol:not(.sb-anchor, .sb-unstyled, .sb-unstyled ol)),
