--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -1,4 +1,4 @@
-<link href="https://pkg.csb.dev/razorpay/blade/commit/f2ca3f2f/@razorpay/blade/fonts.css" rel="stylesheet">
+<link href="https://unpkg.com/@razorpay/blade/fonts.css" rel="stylesheet">
 <style>
   /* 
     Fix these overrides when there is better resolution to this issue-
