--- a/packages/blade/.storybook/react/preview-head.html
+++ b/packages/blade/.storybook/react/preview-head.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="https://unpkg.com/@razorpay/blade/fonts.css" rel="stylesheet">
 <style>
   /* 
